syntax = "proto3";
package Cratis.Chronicle.Contracts.Events.Constraints;
import "google/protobuf/empty.proto";

message Constraint {
   string Name = 1;
   ConstraintType Type = 2;
   string RemovedWith = 3;
   OneOf_UniqueConstraintDefinition_UniqueEventTypeConstraintDefinition Definition = 4;
}
enum ConstraintType {
   Unknown = 0;
   Unique = 1;
   UniqueEventType = 2;
}
message OneOf_UniqueConstraintDefinition_UniqueEventTypeConstraintDefinition {
   UniqueConstraintDefinition Value0 = 1;
   UniqueEventTypeConstraintDefinition Value1 = 2;
}
message RegisterConstraintsRequest {
   string EventStore = 1;
   repeated Constraint Constraints = 2;
}
message UniqueConstraintDefinition {
   repeated UniqueConstraintEventDefinition EventDefinitions = 1;
   bool IgnoreCasing = 2;
}
message UniqueConstraintEventDefinition {
   string EventTypeId = 1;
   repeated string Properties = 2;
}
message UniqueEventTypeConstraintDefinition {
   string EventTypeId = 1;
}
service Constraints {
   rpc Register (RegisterConstraintsRequest) returns (.google.protobuf.Empty);
}
